--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -1,3 +1,7 @@
+// ---------------------------------------------------------------
+// Build configuration area start
+// ---------------------------------------------------------------
+
 // Setting this define to 0 will disable the MQTT functionality
 #define MQTT_SUPPORTED 1
 
@@ -14,24 +18,21 @@
 // Setting this define to 1 will enable a web page (<ip>/debug) where debug messages can be displayed
 #define ENABLE_WEB_DEBUG 0
 
-
 // Setting this flag to 1 will simulate the inverter
 // This could be helpful if it is night and the inverter is not working or
 // during development where the stick is not connected to the inverter
 #define SIMULATE_INVERTER 0
 
 // Data of the Wifi access point
-#define WIFI_SSID         "<WIFI_SSID>"
-#define WIFI_PASSWORD     "<WIFI_PASSWORD>"
 #define HOSTNAME          "Growatt"
+#define APPassword        "growsolar"
 
 // Username and password for firmware update
-#define UPDATE_USER       "<UDATE_USER>"
-#define UPDATE_PASSWORD   "<UPDATE_PASSWORD>"
+#define UPDATE_USER       "admin"
+#define UPDATE_PASSWORD   "admin"
 
 #if MQTT_SUPPORTED == 1 
-#define MQTT_SERVER       "<MQTT_SERVER_IP>"
-#define MQTT_TOPIC        "<MyTopic>"
+#define MQTT_TOPIC        "energy/solar"
 #endif
 
 #if PINGER_SUPPORTED == 1
