--- a/platformio.ini
+++ b/platformio.ini
@@ -28,3 +28,15 @@ lib_deps =
     4-20ma/ModbusMaster@^2.0.1
     bluemurder/ESP8266-ping@^2.0.1
     https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
+
+[env:nodemcu-32s]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+build_flags = "-D MQTT_MAX_PACKET_SIZE=512"
+lib_deps = 
+    ArduinoOTA
+    knolleary/PubSubClient@^2.8
+    4-20ma/ModbusMaster@^2.0.1
+    bluemurder/ESP8266-ping@^2.0.1
+    https://github.com/tzapu/WiFiManager
