adapted to esp32
Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 build_flags = "-D MQTT_MAX_PACKET_SIZE=512"
+board_build.filesystem = littlefs
 lib_deps = 
     ArduinoOTA
     knolleary/PubSubClient@^2.8
