added support for lolin32
Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,18 @@ lib_deps =
     https://github.com/tzapu/WiFiManager
     https://github.com/tobiasfaust/ESPHTTPUpdateServer
     
-
+[env:lolin32]
+platform = espressif32
+board = lolin32
+framework = arduino
+build_flags = "-D MQTT_MAX_PACKET_SIZE=512"
+board_build.filesystem = littlefs
+lib_deps = 
+    ArduinoOTA
+    knolleary/PubSubClient@^2.8
+    4-20ma/ModbusMaster@^2.0.1
+    https://github.com/tzapu/WiFiManager
+    https://github.com/tobiasfaust/ESPHTTPUpdateServer
 
 
 
