--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,11 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[platformio]
 src_dir = SRC/ShineWiFi-ModBus
 default_envs = ShineWifiX
-
+ 
+[platformio]
+default_envs = lolin32
 
 [env]
 monitor_speed = 115200
@@ -28,34 +29,32 @@ lib_deps =
     4-20ma/ModbusMaster@^2.0.1
     bluemurder/ESP8266-ping@^2.0.1
     https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
+    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
 
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-build_flags = "-D MQTT_MAX_PACKET_SIZE=512"
 board_build.filesystem = littlefs
 lib_deps = 
     ArduinoOTA
     knolleary/PubSubClient@^2.8
     4-20ma/ModbusMaster@^2.0.1
-    bluemurder/ESP8266-ping@^2.0.1
-    https://github.com/tzapu/WiFiManager
-    https://github.com/tobiasfaust/ESPHTTPUpdateServer
+    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
+    https://github.com/tobiasfaust/ESPHTTPUpdateServer#9546fdadf688d782b80745cdadf986ba1c441c04
+    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
+lib_ignore=LittleFS_esp32
     
 [env:lolin32]
 platform = espressif32
 board = lolin32
 framework = arduino
-build_flags = "-D MQTT_MAX_PACKET_SIZE=512"
 board_build.filesystem = littlefs
 lib_deps = 
     ArduinoOTA
     knolleary/PubSubClient@^2.8
     4-20ma/ModbusMaster@^2.0.1
-    https://github.com/tzapu/WiFiManager
-    https://github.com/tobiasfaust/ESPHTTPUpdateServer
-
-
-
-    
+    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
+    https://github.com/tobiasfaust/ESPHTTPUpdateServer#9546fdadf688d782b80745cdadf986ba1c441c04
+    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
+lib_ignore=LittleFS_esp32
