--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -21,7 +21,9 @@
 // Setting this flag to 1 will simulate the inverter
 // This could be helpful if it is night and the inverter is not working or
 // during development where the stick is not connected to the inverter
+// if Simulating the Inverter we've to set a Device Type this could be ShineWiFi_X or ShineWiFi_S
 #define SIMULATE_INVERTER 0
+#define SIMULATE_DEVICE ShineWiFi_X
 
 // Data of the Wifi access point
 // Default IP 192.168.4.1
