build: build project with github actions

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-src_dir = SRC\ShineWiFi-ModBus
+src_dir = SRC/ShineWiFi-ModBus
 default_envs = ShineWifiX
 
 
@@ -24,7 +24,7 @@ framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
     ArduinoOTA
-	knolleary/PubSubClient@^2.8
-	4-20ma/ModbusMaster@^2.0.1
+    knolleary/PubSubClient@^2.8
+    4-20ma/ModbusMaster@^2.0.1
     bluemurder/ESP8266-ping@^2.0.1
     https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
