Add builds for lolin32 and nodemcu-32s to github actions
Signed-off-by: crasu <spam@crasu.de>

--- a/.github/workflows/platformio.yaml
+++ b/.github/workflows/platformio.yaml
@@ -35,4 +35,4 @@ jobs:
       run: |
         cp "SRC/ShineWiFi-ModBus/Config.h.example" "SRC/ShineWiFi-ModBus/Config.h"
     - name: Run PlatformIO
-      run: pio run
+      run: pio run -e ShineWifiX -e lolin32 -e nodemcu-32s
