--- a/.github/workflows/platformio.yaml
+++ b/.github/workflows/platformio.yaml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'release/*'
   pull_request:
     types: [assigned, opened, synchronize, reopened]
 
@@ -36,3 +38,15 @@ jobs:
         cp "SRC/ShineWiFi-ModBus/Config.h.example" "SRC/ShineWiFi-ModBus/Config.h"
     - name: Run PlatformIO
       run: pio run -e ShineWifiX -e lolin32 -e nodemcu-32s
+    - name: Adjust firmware filename
+      run: |
+        mkdir release
+        mv .pio/build/lolin32/firmware.bin release/firmware-lolin32.bin
+        mv .pio/build/ShineWifiX/firmware.bin release/firmware-ShineWifiX.bin
+        mv .pio/build/nodemcu-32s/firmware.bin release/firmware-Snodemcu-32s.bin
+    - name: Release
+      uses: fnkr/github-action-ghr@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GHR_PATH: release/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
