--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -64,6 +64,7 @@
 //#define IP_ADDRESS IPAddress(192, 168, 0, 2)
 //#define IP_GATEWAY IPAddress(192, 168, 0, 1)
 //#define IP_SUBNET IPAddress(255, 255, 255, 0)
+//#define IP_DNS IPAddress(192, 168, 0, 1)
 
 // Define a condition for starting the Wifi Manager
 // On Growatt devices the Pushbutton is connected to the ADC Pin (A0) and pulled to GND when pressed
