Add SPF3500/5000 Modbus protocol support.
I disassembled ShineWifi-F stick, which is used for
Growatt SPF5000ES, and also turned out similar
to other ShineWifi (ESP8266 inside), difference
with Serial one is that RS232 are send over data
lines of USB.
Another problem of Growatt is totally different protocol,
thankfully available as PDF in internet.
Code tested on Growatt SPF5000ES + custom adapter
(based on Wemos D1 + MAX3232 + USB connector).

Signed-off-by: Denys Fedoryshchenko <denys.f@collabora.com>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -6,6 +6,7 @@
 
 // Define used modbus version used by your invertor here. Currently
 // only 120 (v1.20), 124 (v1.24) and 305 (v3.05) versions are supported.
+// Also SPF5000ES (Probably SPF3000ES too) coded as 5000 supported.
 // New protocols can be easily defined by adding new Growatt<version>.cpp/h
 // files and then specifying the protocol there. See existing procol files
 // for reference.
