--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -37,6 +37,12 @@
 // #define ENABLE_WEB_DEBUG
 // define this will enable Remote Debug
 // #define ENABLE_TELNET_DEBUG
+// define this for syslog logging
+// #define SYSLOG_HOST IPAddress(192, 168, 178, 1)
+// define syslog port if not default
+// #define SYSLOG_PORT 444
+// define this to send debug messages to mqtt
+// #define ENABLE_MQTT_DEBUG
 
 // Enable TLS connection from stick to broker. Make sure to update port and hostname to match the cert
 // of the mqtt broker as well. Change this CERT to your custom mqtt cert.
