--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,6 @@
 default_envs = ShineWifiX, nodemcu-32s, lolin32
 src_dir = SRC/ShineWiFi-ModBus
 
-
 [env]
 monitor_speed = 115200
 upload_speed = 921600
@@ -50,6 +49,7 @@ lib_deps =
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
 lib_ignore=LittleFS_esp32
+build_flags = "-D MQTT_MAX_PACKET_SIZE=4096"
 
 [env:lolin32]
 platform = espressif32
@@ -65,3 +65,4 @@ lib_deps =
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
 lib_ignore=LittleFS_esp32
+build_flags = "-D MQTT_MAX_PACKET_SIZE=4096"
