--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -31,10 +31,18 @@
 // The serial port is the same used for the communication to the inverter.
 // Enabling this feature can cause problems with the inverter communication!
 // For ShineWiFi-S everything seems to work perfect even though this flag is set
-#define ENABLE_DEBUG_OUTPUT 0
+// #define ENABLE_DEBUG_OUTPUT
 
-// Setting this define to 1 will enable a web page (<ip>/debug) where debug messages can be displayed
-#define ENABLE_WEB_DEBUG 1
+// define this will enable a web page (<ip>/debug) where debug messages can be displayed
+// #define ENABLE_WEB_DEBUG
+// define this will enable Remote Debug
+// #define ENABLE_TELNET_DEBUG
+// define this for syslog logging
+// #define SYSLOG_HOST IPAddress(192, 168, 178, 1)
+// define syslog port if not default
+// #define SYSLOG_PORT 444
+// define this to send debug messages to mqtt
+// #define ENABLE_MQTT_DEBUG
 
 // Enable TLS connection from stick to broker. Make sure to update port and hostname to match the cert
 // of the mqtt broker as well. Change this CERT to your custom mqtt cert.
