--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,9 @@ lib_deps =
     https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
+build_flags =
+  ${env.build_flags}
+  '-DAP_BUTTON_PRESSED=analogRead\(A0\)\<50'
 
 [env:nodemcu-32s]
 platform = espressif32
