Build All really Build All configurations

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = ShineWifiX
+default_envs = ShineWifiX, nodemcu-32s, lolin32
 src_dir = SRC/ShineWiFi-ModBus
 
 
