fix compilation issue on windows #162
Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,6 @@ src_dir = SRC/ShineWiFi-ModBus
 monitor_speed = 115200
 upload_speed = 921600
 build_flags = 
-    "-D MQTT_MAX_PACKET_SIZE=2048"
     "-Wno-comment"
 
 [env:ShineWifiX]
@@ -33,7 +32,8 @@ lib_deps =
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
 build_flags =
     ${env.build_flags}
-    '-DAP_BUTTON_PRESSED=analogRead\(A0\)\<50'
+    "-D MQTT_MAX_PACKET_SIZE=2048"    
+    "-D ENABLE_AP_BUTTON=1"
 
 [env:nodemcu-32s]
 platform = espressif32
@@ -49,7 +49,9 @@ lib_deps =
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
 lib_ignore=LittleFS_esp32
-build_flags = "-D MQTT_MAX_PACKET_SIZE=4096"
+build_flags = 
+    ${env.build_flags}
+    "-D MQTT_MAX_PACKET_SIZE=4096"
 
 [env:lolin32]
 platform = espressif32
@@ -65,4 +67,5 @@ lib_deps =
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
 lib_ignore=LittleFS_esp32
-build_flags = "-D MQTT_MAX_PACKET_SIZE=4096"
+    ${env.build_flags}
+    "-D MQTT_MAX_PACKET_SIZE=4096"
