Replaced self written configuration storage by preference module. (#163)
* Removed self written configuration storage by preference module.
* removed direct littlefs includes

Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ lib_deps =
     knolleary/PubSubClient@^2.8
     4-20ma/ModbusMaster@^2.0.1
     bluemurder/ESP8266-ping@^2.0.1
+    vshymanskyy/Preferences@2.1.0
     https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
