Add missing build_flags parameter for lolin32 build.
Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,5 +68,6 @@ lib_deps =
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
 lib_ignore=LittleFS_esp32
+build_flags = 
     ${env.build_flags}
     "-D MQTT_MAX_PACKET_SIZE=4096"
