--- a/.github/workflows/platformio.yaml
+++ b/.github/workflows/platformio.yaml
@@ -37,13 +37,14 @@ jobs:
       run: |
         cp "SRC/ShineWiFi-ModBus/Config.h.example" "SRC/ShineWiFi-ModBus/Config.h"
     - name: Run PlatformIO
-      run: pio run -e ShineWifiX -e lolin32 -e nodemcu-32s
+      run: pio run -e ShineWifiX -e lolin32 -e nodemcu-32s -e d1
     - name: Adjust firmware filename
       run: |
         mkdir release
         mv .pio/build/lolin32/firmware.bin release/firmware-lolin32.bin
         mv .pio/build/ShineWifiX/firmware.bin release/firmware-ShineWifiX.bin
-        mv .pio/build/nodemcu-32s/firmware.bin release/firmware-Snodemcu-32s.bin
+        mv .pio/build/nodemcu-32s/firmware.bin release/firmware-nodemcu-32s.bin
+        mv .pio/build/d1/firmware.bin release/firmware-D1-mini.bin
     - name: Release
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
