Adapted example file with new serial debug setting
Signed-off-by: crasu <spam@crasu.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -32,14 +32,14 @@
 // The serial port is the same used for the communication to the inverter.
 // Enabling this feature can cause problems with the inverter communication!
 // For ShineWiFi-S everything seems to work perfect even though this flag is set
-// #define ENABLE_DEBUG_OUTPUT
+// #define ENABLE_SERIAL_DEBUG
 
 // define this will enable a web page (<ip>/debug) where debug messages can be displayed
 #define ENABLE_WEB_DEBUG
 // define this will enable Remote Debug
 // #define ENABLE_TELNET_DEBUG
 
-#if defined(ENABLE_DEBUG_OUTPUT) || defined(ENABLE_WEB_DEBUG) || defined(ENABLE_TELNET_DEBUG)
+#if defined(ENABLE_SERIAL_DEBUG) || defined(ENABLE_WEB_DEBUG) || defined(ENABLE_TELNET_DEBUG)
 // to debug Modbus output turn this on (this is very verbose)
 // #define DEBUG_MODBUS_OUTPUT
 #endif
