--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = ShineWifiX, nodemcu-32s, lolin32
+default_envs = ShineWifiX
+#default_envs = d1
+#default_envs = nodemcu-32s
+#default_envs = lolin32
+
 src_dir = SRC/ShineWiFi-ModBus
 
 [env]
@@ -36,6 +40,27 @@ build_flags =
     ${env.build_flags}
     "-D MQTT_MAX_PACKET_SIZE=2048"
     "-D ENABLE_AP_BUTTON=1"
+    
+[env:d1]
+platform = espressif8266
+board = d1
+framework = arduino
+lib_ldf_mode = deep+
+lib_deps =
+    ArduinoOTA
+    knolleary/PubSubClient@^2.8
+    4-20ma/ModbusMaster@^2.0.1
+    bluemurder/ESP8266-ping@^2.0.1
+    vshymanskyy/Preferences@2.1.0
+    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
+    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
+    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
+    https://github.com/dirkx/tee-log.git
+build_flags =
+    ${env.build_flags}
+    "-D MQTT_MAX_PACKET_SIZE=2048"
+    "-D ENABLE_AP_BUTTON=0"    
+    
 
 [env:nodemcu-32s]
 platform = espressif32
