some renames and moved mqtt ifdefs
Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ src_dir = SRC/ShineWiFi-ModBus
 [env]
 monitor_speed = 115200
 upload_speed = 921600
+board_build.filesystem = littlefs
 build_flags = 
     "-Wno-comment"
 
