Unify lib deps and update WifiManager to latest version
Signed-off-by: crasu <spam@crasu.de>

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,15 @@ src_dir = SRC/ShineWiFi-ModBus
 [env]
 monitor_speed = 115200
 upload_speed = 921600
+lib_deps =
+    ArduinoOTA
+    knolleary/PubSubClient@^2.8
+    vshymanskyy/Preferences@2.1.0
+    https://github.com/tzapu/WiFiManager#v2.0.16-rc.2
+    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
+    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
+    https://github.com/dirkx/tee-log.git
+    4-20ma/ModbusMaster@^2.0.1
 build_flags = 
     "-Wno-comment"
 
@@ -23,19 +32,12 @@ board = esp07s
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps =
-    ArduinoOTA
-    knolleary/PubSubClient@^2.8
-    4-20ma/ModbusMaster@^2.0.1
+    ${env.lib_deps}
     bluemurder/ESP8266-ping@^2.0.1
-    vshymanskyy/Preferences@2.1.0
-    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
-    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
-    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
-    https://github.com/dirkx/tee-log.git
 build_flags =
     ${env.build_flags}
     "-D MQTT_MAX_PACKET_SIZE=2048"
-    "-D ENABLE_AP_BUTTON=0"
+    "-D ENABLE_AP_BUTTON=1"
 
 [env:ShineWifiS]
 platform = espressif8266
@@ -43,15 +45,8 @@ board = esp12e
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps =
-    ArduinoOTA
-    knolleary/PubSubClient@^2.8
-    4-20ma/ModbusMaster@^2.0.1
+    ${env.lib_deps}
     bluemurder/ESP8266-ping@^2.0.1
-    vshymanskyy/Preferences@2.1.0
-    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
-    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
-    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
-    https://github.com/dirkx/tee-log.git
 build_flags =
     ${env.build_flags}
     "-D MQTT_MAX_PACKET_SIZE=2048"    
@@ -63,15 +58,8 @@ board = d1
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps =
-    ArduinoOTA
-    knolleary/PubSubClient@^2.8
-    4-20ma/ModbusMaster@^2.0.1
+    ${env.lib_deps}
     bluemurder/ESP8266-ping@^2.0.1
-    vshymanskyy/Preferences@2.1.0
-    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
-    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
-    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
-    https://github.com/dirkx/tee-log.git
 build_flags =
     ${env.build_flags}
     "-D MQTT_MAX_PACKET_SIZE=2048"
@@ -83,13 +71,7 @@ board = nodemcu-32s
 framework = arduino
 board_build.filesystem = littlefs
 lib_deps =
-    ArduinoOTA
-    knolleary/PubSubClient@^2.8
-    4-20ma/ModbusMaster@^2.0.1
-    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
-    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
-    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
-    https://github.com/dirkx/tee-log.git
+    ${env.lib_deps}
 lib_ignore=LittleFS_esp32
 build_flags = 
     ${env.build_flags}
@@ -101,13 +83,7 @@ board = lolin32
 framework = arduino
 board_build.filesystem = littlefs
 lib_deps =
-    ArduinoOTA
-    knolleary/PubSubClient@^2.8
-    4-20ma/ModbusMaster@^2.0.1
-    https://github.com/tzapu/WiFiManager#94bb90322bf85de2c9ec592858f20643161bc11f
-    https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
-    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
-    https://github.com/dirkx/tee-log.git
+    ${env.lib_deps}
 lib_ignore=LittleFS_esp32
 build_flags = 
     ${env.build_flags}
