Add watchdog on esp32. Watchdog is reset whenever a mqtt message is send with success.
Signed-off-by: crasu <spam@crasu.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -73,6 +73,7 @@
 #define WIFI_RETRY_TIMER 120000 // 120s default
 #define LED_TIMER 500 //  0.5s default
 #define BUTTON_TIMER 500 //  0.5s default
+#define WDT_TIMEOUT 300 // 5 min default
 
 #if PINGER_SUPPORTED == 1
     #define GATEWAY_IP IPAddress(192, 168, 178, 1)
