Make it possible to disable disconnect of config AP
Signed-off-by: crasu <spam@crasu.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -95,3 +95,8 @@
 #if ENABLE_AP_BUTTON == 1
     #define AP_BUTTON_PRESSED analogRead(A0)<50
 #endif
+
+// Enabling this will make the wifiManager available on the previously configured wifi and ip.
+// This makes it possible to reconnfigure the stick without a direct WIFI connection. This is
+// a security risk as anyone could now remotly update your firmware. 
+// #define KEEP_AP_CONFIG_CONNECTION 1
