Fix some typos (found by `codespell` and `typos`)
Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -98,5 +98,5 @@
 
 // Enabling this will make the wifiManager available on the previously configured wifi and ip.
 // This makes it possible to reconnfigure the stick without a direct WIFI connection. This is
-// a security risk as anyone could now remotly update your firmware. 
+// a security risk as anyone could now remotely update your firmware.
 // #define KEEP_AP_CONFIG_CONNECTION 1
