feat: add option to enable OTA updates
Signed-off-by: Peter Lieven <pl@dlhnet.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -20,6 +20,11 @@
 // Setting this define to 0 will disable the MQTT functionality
 #define MQTT_SUPPORTED 1
 
+// Enable OTA update via espota. This is mainly for development purposes and enables updates
+// of the device without physical access. Use at our own risk!
+#define OTA_SUPPORTED 0
+#define OTA_PASSWORD "enter_ota_secret_here"
+
 // Enable direct modbus read/write support via the WebGUI. Enabling this is a potential security issue.
 #define ENABLE_MODBUS_COMMUNICATION 1
 
