feat(metrics): add support for adding a name label
Signed-off-by: Peter Lieven <pl@dlhnet.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -28,6 +28,10 @@
 // Enable direct modbus read/write support via the WebGUI. Enabling this is a potential security issue.
 #define ENABLE_MODBUS_COMMUNICATION 1
 
+// Enable the addition of a name label (set to the hostname) to the metrics export.
+// Be careful, changing this setting will create a new series in Prometheus.
+#define ENABLE_METRICS_NAME_LABEL 0
+
 // Setting this define to 1 will ping the default gateway periodically
 // if the ping is not successful, the wifi connection will be reestablished
 #define PINGER_SUPPORTED 0
