Support overriding PlatformIO config using platformio-local.ini
Signed-off-by: Sebastian Lövdahl <slovdahl@hibox.fi>

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,8 @@
 [platformio]
 default_envs = ShineWifiX, ShineWifiS, nodemcu-32s, lolin32, d1
 src_dir = SRC/ShineWiFi-ModBus
+extra_configs =
+    platformio-local.ini
 
 [env]
 monitor_speed = 115200
