refactor: rename HOSTNAME to DEFAULT_HOSTNAME
as the HOSTNAME is now used only as a default in the config AP setup screen,
rename the constant accordingly.

Signed-off-by: Peter Lieven <pl@dlhnet.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -66,7 +66,7 @@
 // Data of the Wifi access point
 // Default IP 192.168.4.1
 // Hold down the Button for a few seconds to enter Access Point mode
-#define HOSTNAME          "Growatt"
+#define DEFAULT_HOSTNAME  "Growatt"
 #define APPassword        "growsolar"
 
 // Username and password for firmware update
