more playing around with tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 [platformio]
 default_envs = ShineWifiX, ShineWifiS, nodemcu-32s, lolin32, d1
 src_dir = SRC/ShineWiFi-ModBus
+test_dir = SRC/test
 extra_configs =
     platformio-local.ini
 
@@ -89,3 +90,11 @@ lib_deps =
 lib_ignore=LittleFS_esp32
 build_flags = 
     ${env.build_flags}
+
+[env:test]
+platform = native
+lib_deps =
+    ArduinoFake
+    https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
+    https://github.com/bblanchon/ArduinoStreamUtils#v1.7.3
+
