feat: add support for TL-X(H) inverters
according to the modbus v1.24 specification from 2020-04-28 page 3 the following
inverters must use different input registers (3000+):

- TL-X/TL-XH MIN Type (it seems that they are also called MIC today).
- MOD TL3-XH (this also seems to apply for MID KTL3-XH).

To choose the high input and holding registers set GROWAT_MODBUS_VERION 3000
in Config.h.

The inverters seem to be somewhat compatible to the low register range, but if
a battery system is used the battery system is not reported correctly and holding
registers do not work at all.

This patch also adds support for setting charge and discharge power rates and stop SOCs
as well as AC charging. Currently not supported are getting and setting timeslots
for different priority modes.

Signed-off-by: Peter Lieven <pl@dlhnet.de>

--- a/SRC/ShineWiFi-ModBus/Config.h.example
+++ b/SRC/ShineWiFi-ModBus/Config.h.example
@@ -7,6 +7,8 @@
 
 // Define used modbus version used by your invertor here. Currently
 // only 120 (v1.20), 124 (v1.24) and 305 (v3.05) versions are supported.
+// Growatt TL-X(H) inverters use v1.24, but use different registers (3000 and above).
+// To enable TL-X(H) support set the modbus version to 3000.
 // Also SPF (version 5000) has some preliminary support.
 // New protocols can be easily defined by adding new Growatt<version>.cpp/h
 // files and then specifying the protocol there. See existing procol files
