fix platformIO libary list

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 [platformio]
 default_envs = ShineWifiX, ShineWifiS, nodemcu-32s, lolin32, d1
 src_dir = SRC/ShineWiFi-ModBus
-extra_configs =
-    platformio-local.ini
+#extra_configs =
+#    platformio-local.ini
 
 [env]
 monitor_speed = 115200
@@ -24,10 +24,11 @@ lib_deps =
     https://github.com/tzapu/WiFiManager#v2.0.16-rc.2
     https://github.com/khoih-prog/ESP_DoubleResetDetector#bce10ef01f3d4864a07ef31fdec2ad65adb3e5b8
     https://github.com/bblanchon/ArduinoJson#67b6797b6d19e944b01213926872f955f4b9d54d
-    https://github.com/dirkx/tee-log.git
+    #https://github.com/dirkx/tee-log.git
+    makerspaceleiden/TLog @ ^1.0.5
     https://github.com/OpenInverterGateway/ModbusMaster#16d5f1f1cb4e1c9a7943425557a09ac9e89d624c
     https://github.com/bblanchon/ArduinoStreamUtils#v1.7.3
-
+    ottowinter/ESPAsyncWebServer-esphome@^3.3.0
 
 [env:ShineWifiX]
 platform = espressif8266
